<resources>
    <string name="app_name">Shramik</string>
    <string name="name">Name</string>
    <string name="required">Required</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="Age">Age</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="Apply">"Applied for : "</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="AppliedFor">Applied For :</string>
    <string name="builder">Builder</string>
    <string name="Labour">Labour</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="welcome_to_shramik">Welcome to Shramik!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_shramik">SHRAMIK</string>
    <string name="msg_shramik_make_an">Shramik Make an Effort</string>

</resources>